--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "@types/express": "^4.17.21",
     "@types/node": "^22.5.0",
     "nodemon": "^3.1.4",
-    "typescript": "^5.5.4"
-  }
+    "typescript": "^5.5.4",
+    "vitest": "^2.0.5"
+  },
+"scripts": {
+  "dev": "nodemon --exec ts-node src/shared/server.ts",
+  "test": "vitest"
+}
 }
