--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,25 +1,17 @@
-name: Node.js Typescript CI
+name: Run Unit Tests
 
-on:
-  push:
-    branches: [ dev ]
-  pull_request:
-    branches: [ dev ]
+on: [push]
+
 jobs:
-  build:
+  run-unit-tests:
+    name: Run Unit Tests
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [ 18.x ]
+
     steps:
-      - uses: actions/checkout@v3
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
-          node-version: ${{ matrix.node-version }}
-      - name: Install dependencies
-        run: yarn
-      - name: Build
-        run: yarn build
-      - name: Test (Vitest)
-        run: yarn test
+          node-version: 18
+          cache: "yarn"
+
+      - run: yarn test
