--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -12,6 +12,8 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 18
-          cache: "yarn"
+          cache: "npm"
 
-      - run: yarn test
+      - run: npm ci
+
+      - run: npm run test
