--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "@aws-sdk/client-cognito-identity-provider": "^3.637.0",
+    "@types/cors": "^2.8.17",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
@@ -17,8 +18,8 @@
     "typescript": "^5.5.4",
     "vitest": "^2.0.5"
   },
-"scripts": {
-  "dev": "nodemon --exec ts-node src/shared/server.ts",
-  "test": "vitest"
-}
+  "scripts": {
+    "dev": "nodemon --exec ts-node src/shared/server.ts",
+    "test": "vitest"
+  }
 }
