--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "dependencies": {
     "@aws-sdk/client-cognito-identity-provider": "^3.637.0",
     "@types/cors": "^2.8.17",
+    "@types/nodemailer": "^6.4.15",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mongoose": "^8.5.4"
+    "mongoose": "^8.5.4",
+    "nodemailer": "^6.9.14"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
