--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.5.4",
-    "nodemailer": "^6.9.14"
+    "nodemailer": "^6.9.14",
+    "serverless-http": "^3.2.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
@@ -22,6 +23,7 @@
   },
   "scripts": {
     "dev": "nodemon src/server.ts",
-    "test": "vitest"
+    "test": "vitest",
+    "build": "tsc -p ."
   }
 }
