--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "express": "^4.19.2",
     "mongoose": "^8.5.4",
     "nodemailer": "^6.9.14",
-    "serverless-http": "^3.2.0"
+    "serverless-http": "^3.2.0",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^22.5.0",
+    "@types/uuid": "^10.0.0",
     "nodemon": "^3.1.4",
     "typescript": "^5.5.4",
     "vitest": "^2.0.5"
