refactor: Update `tsconfig.json` to exclude `src/tests/**/*` and include `src/modules/**/*` and `src/shared/**/*`

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -108,6 +108,11 @@
   "exclude": [
     "node_modules",
     "dist",
-    "iac"
+    "iac",
+    "src/tests/**/*"
+  ],
+  "include": [
+    "src/modules/**/*",
+    "src/shared/**/*"
   ]
 }
