--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -30,6 +30,7 @@ jobs:
         run: |
           echo "STAGE=${{ secrets.STAGE }}" >> $GITHUB_ENV
           echo "STACK_NAME=${{ secrets.STACK_NAME }}${{ github.ref_name }}" >> $GITHUB_ENV
+          echo "MONGO_URI=${{ secrets.MONGO_URI }}${{ github.ref_name }}" >> $GITHUB_ENV
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
@@ -50,6 +51,7 @@ jobs:
           echo MONGO_URI=${{ secrets.MONGO_URI }} >> $GITHUB_ENV
           echo EMAIL_LOGIN=${{ secrets.EMAIL_LOGIN }} >> $GITHUB_ENV
           echo EMAIL_PASSWORD=${{ secrets.EMAIL_PASSWORD }} >> $GITHUB_ENV
+          echo S3_BUCKET_NAME=${{ secrets.S3_BUCKET_NAME }} >> $GITHUB_ENV
       - name: CDK Bootstrap
         run: |
           echo "CDK Bootstrap"
@@ -73,3 +75,4 @@ jobs:
           MONGO_URI: ${{ secrets.MONGO_URI }}
           EMAIL_LOGIN: ${{ secrets.EMAIL_LOGIN }}
           EMAIL_PASSWORD: ${{ secrets.EMAIL_PASSWORD }}
+          S3_BUCKET_NAME: ${{ secrets.S3_BUCKET_NAME }}
