--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
   "dependencies": {
     "@aws-sdk/client-cognito-identity-provider": "^3.637.0",
     "@types/nodemailer": "^6.4.15",
+    "aws-sdk": "^2.1689.0",
+    "busboy": "^1.6.0",
     "dotenv": "^16.4.5",
     "mongoose": "^8.5.4",
     "nodemailer": "^6.9.14",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
+    "@types/aws-sdk": "^2.7.0",
+    "@types/busboy": "^1.5.4",
     "@types/node": "^22.5.0",
     "@types/uuid": "^10.0.0",
     "nodemon": "^3.1.4",
